# meow-jit

./: CMakeLists.txt  OLD_CODE.txt
include/common/: type.h
include/core/: definition.h  meow_object.h  op_code.h  type.h  value.h
include/core/objects/: array.h  function.h  hash.h  module.h  native.h  oop.h  string.h
include/loader/: bytecode_parser.h
include/memory/: garbage_collector.h  gc_disable_guard.h  gc_visitor.h  mark_sweep_gc.h  memory_manager.h
include/module/: module_manager.h
include/runtime/: builtin_registry.h  chunk.h  execution_context.h  operator_dispatcher.h
include/utils/: disassemble.h  unicode.h
include/vm/: meow_engine.h  meow_vm.h
src/common/: forward.ixx  pch.h
src/core/: core.ixx  definition.cpp  definition.cppm  definition.ixx  forward.ixx  gc_visitor.ixx  meow_object.ixx  objects.cpp  value.ixx
src/memory/: gc_visitor.cppm  gc_visitor.ixx  mark_sweep_gc.cpp  memory_manager.cpp
src/module/: module_manager.cpp
src/runtime/: operator_dispatcher.cpp
src/vm/: meow_vm.cpp  meow_vm.ixx
